#Partilly modify pom's